cursive-bootstrap/tests/ui/E-CON/E-CON-0213.cursive
// RUN: compile-fail
// DIAG: E-CON-0213
// SPEC: 8.9
// DESC: yield while key is held (without release)

record Counter {
    var value: i32
}

async procedure yield_with_key(c: shared Counter) -> Sequence<i32> {
    # write c {
        yield c.value  //~ ERROR E-CON-0213: yield while key held
    }
    return ()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
